imlemeted search functionality from api

--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
         </div>
       </div>
     </section>
-    <div class="container"></div>
+    <div class="container">
+      
+      <div id="dropdown is-active">
+        <input class="search-input"/>
+        <div class="dropdown-menu">
+          <div class="dropdown-content">
+            <a href="#" class="dropdown-item">Movie1</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="utils.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
