finished rendering movie

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       <div class="autocomplete">
         
       </div>
+      <div class="summary"></div>
       
+
     <script src="utils.js"></script>
     <script src="index.js"></script>
   </body>
