--- a/index.html
+++ b/index.html
@@ -26,13 +26,25 @@
       </div>
     </section>
     <div class="container">
-      <div class="autocomplete">
-        
+      <div class="columns">
+        <div class="column">
+          <div id="left-autocomplete"></div>
+          <div class="left-summary"></div>
+        </div>
+        <div class="column">
+          <div id="right-autocomplete"></div>
+          <div class="right-summary"></div>
+        </div>
       </div>
-      <div class="summary"></div>
+
+      <div class="column is-half notification is-primary tutorial">
+        <h1 class="title">Search for a movie on both sides</h1>
+        <p class="subtitle">And see which one is better</p>
+      </div>
       
 
     <script src="utils.js"></script>
+    <script src="autocomplete.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
